plugins {
    id 'distribution'
    id 'application' // Executable
    id 'java' // Java project
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    withSourcesJar()
}

application {
    mainClass.set("org.lara.interpreter.weaver.generator.commandline.WeaverGenerator")
}

// Repositories providers
repositories {
    mavenCentral()
}

dependencies {
    implementation ':JavaGenerator'
    implementation ':jOptions'
    implementation ':SpecsUtils'
    implementation ':tdrcLibrary'

    implementation ':LanguageSpecification'
    implementation ':LARAI'
    implementation ':LaraUtils'
    implementation ':WeaverInterface'

    implementation group: 'commons-cli', name: 'commons-cli', version: '1.9.0'
}

// Project sources
sourceSets {
    main {
        java {
            srcDir 'src'
        }

        resources {
            srcDir 'resources'
        }
    }
}

tasks.register('WeaverGenerator', JavaExec) {
    group = "Execution"
    description = "Launches WeaverGenerator"
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.lara.interpreter.weaver.generator.commandline.WeaverGenerator'
    args = []
}
